# ComputerGraphicsFromScratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: Canvas.cpp  Canvas.h  Color.h  SdlWindow.cpp  SdlWindow.h  Vector3D.h
renderers/: RayTracingRenderer.cpp  RayTracingRenderer.h  Renderer.h
world/: Camera.h  Lights.h  Sphere.h  Viewport.h  World.h
